ffire_pt2017 followup

--- a/ffire_pt2017/Makefile
+++ b/ffire_pt2017/Makefile
@@ -185,8 +185,9 @@ hint:
 	@echo "  - How does it work?"
 	@echo "  - What do you need to change to simulate the June wild fires?"
 	@echo "- Open the ICBC_201710.nml configuration"
-	@echo "  - What is diifferent from the template conf_201710.nml?"
 	@echo "  - What does it do?"
+	@echo "  - What is diifferent from the template conf_201710.nml?"
+	@echo "  - What is diifferent from the one you wrote?"
 	@echo "- Open the ICBC configurations for June ICBC_2017?.nml"
 	@echo "  - Why 3 different configurations?"
 	@echo "  - What do they do?"
